--- a/.github/workflows/build-lede-18.06.yml
+++ b/.github/workflows/build-lede-18.06.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt
+name: Build Lean's Lede 18.06 Snapshot
 
 on:
   repository_dispatch:
@@ -18,14 +18,16 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
+  schedule:
+   - cron: 0 0 */15 * *
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/coolsnowwolf/lede.git
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
+  CONFIG_FILE: lede-x86_64.config
+  DIY_P1_SH: lede-diy-part1.sh
+  DIY_P2_SH: lede-diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
