--- a/lede-x86_64.config
+++ b/lede-x86_64.config
@@ -1,6 +1,7 @@
 ###########################
-# Lede Jim's Edition v0.2 #
+# Lede Jim's Edition      #
 ###########################
+# v1.0  2022-07-08        #
 
 # Target
 
@@ -11,7 +12,7 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 
 CONFIG_GRUB_TIMEOUT="0"
-CONFIG_GRUB_IMAGES=y
+# CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_QCOW2_IMAGES=y
 CONFIG_VMDK_IMAGES=y
@@ -203,7 +204,10 @@ CONFIG_PACKAGE_luci-proto-minieap=y
 CONFIG_PACKAGE_luci-proto-relay=y
 
 # Packages
-CONFIG_PACKAGE_zoneinfo-all=y
+CONFIG_PACKAGE_zoneinfo-core=y
+CONFIG_PACKAGE_zoneinfo-simple=y
+CONFIG_PACKAGE_zoneinfo-asia=y
+
 CONFIG_PACKAGE_acpid=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_lsblk=y
@@ -239,8 +243,8 @@ CONFIG_PACKAGE_rsync=y
 CONFIG_PACKAGE_rsyncd=y
 CONFIG_PACKAGE_wget-ssl=y
 CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_tailscale=y
-CONFIG_PACKAGE_tailscaled=y
+# CONFIG_PACKAGE_tailscale=y
+# CONFIG_PACKAGE_tailscaled=y
 CONFIG_PACKAGE_minieap-gdufs=y
 
 CONFIG_PACKAGE_git=y
