--- a/lede-x86_64.config
+++ b/lede-x86_64.config
@@ -13,7 +13,7 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 
 CONFIG_GRUB_TIMEOUT="0"
-# CONFIG_GRUB_IMAGES=y
+CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_QCOW2_IMAGES=y
 CONFIG_VMDK_IMAGES=y
