--- a/lede-x86_64.config
+++ b/lede-x86_64.config
@@ -1,7 +1,7 @@
 ########################
 #  Lede Jim's Edition  #
 ########################
-#  v1.0  2022-07-08    #
+#  v1.1  2022-07-08    #
 ########################
 
 # Target
@@ -14,7 +14,7 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 
 CONFIG_GRUB_TIMEOUT="0"
 CONFIG_GRUB_IMAGES=y
-CONFIG_GRUB_EFI_IMAGES=y
+# CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_QCOW2_IMAGES=y
 CONFIG_VMDK_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
@@ -182,13 +182,11 @@ CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-frpc=y
 # CONFIG_PACKAGE_luci-app-frps=y
-CONFIG_PACKAGE_luci-app-fullconenat=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-npc=y
 # CONFIG_PACKAGE_luci-app-nps=y
-CONFIG_PACKAGE_luci-app-ntpc=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-ramfree=y
 CONFIG_PACKAGE_luci-app-shairplay=y
