--- a/config/jede-v1.1-x86_64.config
+++ b/config/jede-v1.1-x86_64.config
@@ -1,7 +1,7 @@
 ########################
 #  Lede Jim's Edition  #
 ########################
-#  v1.1  2022-07-08    #
+#  v1.1.1  2022-08-11  #
 ########################
 
 # Target
@@ -49,6 +49,7 @@ CONFIG_PACKAGE_kmod-i2c-core=y
 ## Network Devices
 CONFIG_PACKAGE_kmod-ipvlan=y
 CONFIG_PACKAGE_kmod-ixgbevf=y
+CONFIG_PACKAGE_kmod-sfp=y
 
 ## File System
 CONFIG_PACKAGE_kmod-fs-f2fs=y
@@ -254,4 +255,3 @@ CONFIG_PACKAGE_tree=y
 
 CONFIG_PACKAGE_vim-full=y
 CONFIG_PACKAGE_whereis=y
-CONFIG_PACKAGE_zsh=y
