--- a/config/jede-v1.1-x86_64.config
+++ b/config/jede-v1.1-x86_64.config
@@ -1,7 +1,7 @@
 ########################
 #  Lede Jim's Edition  #
 ########################
-#  v1.1.1  2022-08-11  #
+#  v1.1.2  2022-08-21  #
 ########################
 
 # Target
@@ -10,13 +10,14 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 
+CONFIG_TARGET_ROOTFS_EXT4FS=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 
 CONFIG_GRUB_TIMEOUT="0"
 CONFIG_GRUB_IMAGES=y
-# CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_QCOW2_IMAGES=y
-CONFIG_VMDK_IMAGES=y
+# CONFIG_VMDK_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
 
 CONFIG_TARGET_KERNEL_PARTSIZE=32
