--- a/config/jede-v1.1-x86_64.config
+++ b/config/jede-v1.1-x86_64.config
@@ -18,6 +18,7 @@ CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_QCOW2_IMAGES=y
 # CONFIG_VMDK_IMAGES=y
+CONFIG_VMDK_IMAGES=n
 CONFIG_TARGET_IMAGES_GZIP=y
 
 CONFIG_TARGET_KERNEL_PARTSIZE=32
