--- a/config/jede-v1.1-x86_64.config
+++ b/config/jede-v1.1-x86_64.config
@@ -1,7 +1,7 @@
 ########################
 #  Lede Jim's Edition  #
 ########################
-#  v1.1.2  2022-08-21  #
+#  v1.1.3  2022-08-21  #
 ########################
 
 # Target
@@ -222,6 +222,9 @@ CONFIG_PACKAGE_nfs-utils=y
 CONFIG_PACKAGE_nfs-utils-libs=y
 CONFIG_PACKAGE_f2fs-tools=y
 CONFIG_PACKAGE_fstrim=y
+CONFIG_PACKAGE_fdisk=y
+CONFIG_PACKAGE_resize2fs=y
+CONFIG_PACKAGE_losetup=y
 
 
 CONFIG_PACKAGE_docker-compose=y
