--- a/.github/workflows/build-lede-18.06.yml
+++ b/.github/workflows/build-lede-18.06.yml
@@ -25,7 +25,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede.git
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/jede-v1.1-x86_64.config
+  CONFIG_FILE: config/jede-x86_64.config
   DIY_P1_SH: lede-diy-part1.sh
   DIY_P2_SH: lede-diy-part2.sh
   UPLOAD_BIN_DIR: false
