--- a/config/jede-x86_64.config
+++ b/config/jede-x86_64.config
@@ -1,7 +1,7 @@
 ########################
 #  Lede Jim's Edition  #
 ########################
-#  v1.2    2022-08-21  #
+#  v1.3    2022-10-30  #
 ########################
 
 # Target
@@ -107,6 +107,7 @@ CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=y
 CONFIG_PACKAGE_kmod-usb-net-rndis=y
 CONFIG_PACKAGE_kmod-usb-net-rtl8150=y
 CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
+CONFIG_PACKAGE_kmod-usb-net-rtl8152-vendor=y
 CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
 CONFIG_PACKAGE_kmod-usb-net-smsc75xx=y
 CONFIG_PACKAGE_kmod-usb-net-smsc95xx=y
@@ -135,13 +136,15 @@ CONFIG_PACKAGE_libudev-fbsd=y
 CONFIG_PACKAGE_libusbmuxd-utils=y
 CONFIG_PACKAGE_usbmuxd=y
 
+
 # LuCI
 CONFIG_PACKAGE_luci-compat=y
-# Translation
+
+## Translation
 CONFIG_LUCI_LANG_zh-cn=y
 CONFIG_LUCI_LANG_en=y
-# APP
-## default app
+
+## APP
 ### exclude default app
 CONFIG_PACKAGE_luci-app-adbyby-plus=n
 CONFIG_PACKAGE_luci-app-autoreboot=n
@@ -155,7 +158,6 @@ CONFIG_PACKAGE_luci-app-samba=n
 CONFIG_PACKAGE_luci-app-ssr-plus=n
 CONFIG_PACKAGE_luci-app-passwall_Transparent_Proxy=n
 CONFIG_PACKAGE_luci-app-passwall2_Transparent_Proxy=n
-
 ### include default app
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 CONFIG_PACKAGE_luci-app-arpbind=y
@@ -171,7 +173,7 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 
-## include custom app
+### include custom app
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=y
 CONFIG_PACKAGE_luci-app-argon-config=y
@@ -182,17 +184,19 @@ CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-frpc=y
-# CONFIG_PACKAGE_luci-app-frps=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-npc=y
-# CONFIG_PACKAGE_luci-app-nps=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-ramfree=y
 CONFIG_PACKAGE_luci-app-shairplay=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-sqm=y
+CONFIG_PACKAGE_luci-app-statistics=y
+CONFIG_PACKAGE_COLLECTD_ENCRYPTED_NETWORK=y
+CONFIG_PACKAGE_collectd-mod-uptime=y
+CONFIG_PACKAGE_collectd-mod-wireless=y
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-uugamebooster=y
 CONFIG_PACKAGE_luci-app-wolplus=y
@@ -202,6 +206,7 @@ CONFIG_PACKAGE_luci-theme-argon=y
 ## Protocols
 CONFIG_PACKAGE_luci-proto-minieap=y
 CONFIG_PACKAGE_luci-proto-relay=y
+
 
 # Packages
 CONFIG_PACKAGE_zoneinfo-core=y
