--- a/config/jede-x86_64.config
+++ b/config/jede-x86_64.config
@@ -15,7 +15,7 @@ CONFIG_TARGET_ROOTFS_SQUASHFS=y
 
 CONFIG_GRUB_TIMEOUT="0"
 CONFIG_GRUB_IMAGES=y
-CONFIG_GRUB_EFI_IMAGES=y
+# CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_QCOW2_IMAGES=y
 # CONFIG_VMDK_IMAGES=y
 CONFIG_VMDK_IMAGES=n
