--- a/config/jede-x86_64.config
+++ b/config/jede-x86_64.config
@@ -1,7 +1,7 @@
 ########################
 #  Lede Jim's Edition  #
 ########################
-#  v1.3    2022-10-30  #
+#  v1.4    2023-01-29  #
 ########################
 
 # Target
@@ -191,7 +191,8 @@ CONFIG_PACKAGE_luci-app-npc=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-ramfree=y
 CONFIG_PACKAGE_luci-app-shairplay=y
-CONFIG_PACKAGE_luci-app-smartdns=y
+# CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-statistics=y
 CONFIG_PACKAGE_COLLECTD_ENCRYPTED_NETWORK=y
@@ -199,6 +200,7 @@ CONFIG_PACKAGE_collectd-mod-uptime=y
 CONFIG_PACKAGE_collectd-mod-wireless=y
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-uugamebooster=y
+CONFIG_PACKAGE_luci-app-watchcat=y
 CONFIG_PACKAGE_luci-app-wolplus=y
 
 ## Theme
