--- a/.github/workflows/build-immortalwrt-mt798x.yml
+++ b/.github/workflows/build-immortalwrt-mt798x.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build Lean's Lede 18.06 Snapshot
+name: Build hanwckf's immortalwrt-mt798x for 360T7(mt7981)
 
 on:
   repository_dispatch:
@@ -18,16 +18,16 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-  schedule:
-   - cron: 0 0 */15 * *
+  # schedule:
+  #  - cron: 0 0 */15 * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede.git
-  REPO_BRANCH: master
+  REPO_BRANCH: openwrt-21.02
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config/jede-x86_64.config
-  DIY_P1_SH: scripts/lede-x86/diy-part1.sh
-  DIY_P2_SH: scripts/lede-x86/diy-part2.sh
+  CONFIG_FILE: config/mt7981-ax3000.config
+  DIY_P1_SH: scripts/immortalwrt-mt798x/diy-part1.sh
+  DIY_P2_SH: scripts/immortalwrt-mt798x/diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
